--- a/ec2_lauch.yml
+++ b/ec2_lauch.yml
@@ -6,6 +6,7 @@
 
   vars_files:
     - templates/awscreds.yml
+    - group_var/all
 
   vars:
     host1: "MSR-test-Instance-1"
@@ -15,3 +16,4 @@
 
   roles:
     - ec2
+    - add_ec2instacestoinverty
