--- a/apache_invokedockercompose.yml
+++ b/apache_invokedockercompose.yml
@@ -1,6 +1,6 @@
 --- # This is structural YAML example to install HTTPD on Centos 7
 
-- hosts: {{ webserver }}
+- hosts: webserver
   become_method: sudo
   connection: ssh
   become: yes
