--- a/dbserver.yml
+++ b/dbserver.yml
@@ -1,10 +1,12 @@
 --- # This is structural YAML example to install HTTPD on Centos 7
 
-- hosts: webserver
+- hosts: dbserver
   become_method: sudo
   connection: ssh
   become: yes
   gather_facts: no
-  
+  remote_user: ubuntu
+
+
   roles:
-    - apache_invokedockercompose
+      - couchdb_invokedockercompose
