--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -15,19 +15,23 @@
 - name:    Add Docker GPG key
   apt_key:
     url: https://download.docker.com/linux/ubuntu/gpg
+  when: docker_installed|failed
 
 - name:    Add Docker APT repository
   apt_repository:
      repo: deb https://download.docker.com/linux/ubuntu {{ansible_distribution_release}} stable
+  when: docker_installed|failed
 
 - name:  upadte packages
   apt:  update_cache=yes
+  when: docker_installed|failed
 
 - name:   Install Docker
   apt:
     name: docker-ce=18.06*
     update_cache: yes
-
+  when: docker_installed|failed
+  
 - name: allow private docker registries
   raw: echo "{ \"insecure-registries\":[\"0.0.0.0/0\"] }" >   /etc/docker/daemon.json
   notify: restart docker
@@ -37,3 +41,4 @@
     url: https://github.com/docker/compose/releases/download/{{dockercompose_version}}/docker-compose-Linux-{{ansible_architecture}}
     dest: /usr/bin/docker-compose
     mode: 0550
+
