--- a/webserver.yml
+++ b/webserver.yml
@@ -1,10 +1,11 @@
 --- # This is structural YAML example to install HTTPD on Centos 7
 
-- hosts: assignment
+- hosts: webserver
   become_method: sudo
   connection: ssh
   become: yes
   gather_facts: no
-
+  remote_user: ubuntu
+  
   roles:
-    - basicpackages
+    - apache_invokedockercompose
